--- a/src/css/scss/modules/spec-z1-z2.scss
+++ b/src/css/scss/modules/spec-z1-z2.scss
@@ -506,12 +506,6 @@ ul.spec-views {
 
   .detail-label {
     padding: 1.125em 1em 0 0;
-
-    strong {
-      display: inline-block;
-      max-width: 100%;
-      @include text-overflow( false );
-    }
   }
 
 
